# pokediamond

./: .clang-format  .clang-format-ignore  .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  INSTALL.md  Makefile  README.md  build_docker.sh  charmap.txt  commondefs.GF  config.mk  debug_02.spa  default.lsf  diamond.rsf  explode_incbins.py  filesystem.mk  format.sh  global.inc  graphics_rules.mk  ld_script.txt  m2ctx.sh  main.c  main.lsf  make_g3_files  make_prog_files  map_header_resolve_fields.py  modulerules.GF  overlay_files  overlaytool.rb  pearl.rsf  pokediamond.bsf  pokediamond.lcf  pokediamond.rsf  pokediamond.us.sha1  pokemon_DS.bnr  (+7 more)
arm7/: ARM7-TS.lcf  CMakeLists.txt  Makefile  arm7-ts.lsf  arm7.lcf  arm7.lsf  arm7.sha1  global.inc  undefined_syms.txt
arm7/asm/: CARD_common.s  CARD_fifo.s  CARD_pullOut.s  CARD_rom.s  CARD_spi.s  CARD_thread.s  CTRDG.s  CTRDG_sp.s  EXI_genPort.s  FS_file.s  MI_dma.s  MI_memory.s  MI_swap.s  NVRAM.s  OS_alarm.s  OS_alloc.s  OS_arena.s  OS_context.s  OS_init.s  OS_interrupt.s  OS_irqHandler.s  OS_irqTable.s  OS_message.s  OS_mutex.s  OS_mutex_s.s  OS_reset.s  OS_spinLock.s  OS_terminate_proc.s  OS_thread.s  OS_tick.s  OS_timer.s  OS_valarm.s  PAD_xyButton.s  PXI_fifo.s  PXI_init.s  RTC_external.s  RTC_internal.s  RTC_unk_03805064.s  SND.s  SND_alarm.s  (+32 more)
arm9/: CMakeLists.txt  Makefile  arm9.lcf  arm9.lsf  arm9.sha1  global.inc  macros.lcf.inc  module_regions.lcf.inc  module_sections.lcf.inc  overlay_table.lcf.inc  pokediamond.us.sha1  pokepearl.us.sha1  undefined_syms.txt
arm9/asm/: CARD_backup.s  CARD_common.s  CARD_pullOut.s  CARD_request.s  CARD_rom.s  CARD_spi.s  CPS_network.s  CP_arm9.s  CP_context.s  CTRDG.s  CTRDG_arm9.s  CTRDG_backup.s  CTRDG_flash_AT29LV512.s  CTRDG_flash_AT29LV512_asm.s  CTRDG_flash_LE26FV10N1TS-10.s  CTRDG_flash_LE39FW512.s  CTRDG_flash_MX29L010.s  CTRDG_flash_MX29L512.s  CTRDG_flash_common.s  CTRDG_proc.s  CTRDG_task.s  DGT_hash1.s  DGT_hash2.s  DGT_sha1s_arm4cw.s  DWC_account.s  DWC_backup.s  DWC_bm_init.s  DWC_init.s  DWC_util_wifiidtool.s  FS_archive.asm.s  FS_archive.s  FS_command.s  FS_command_default.asm.s  FS_command_default.s  FS_file.s  FS_overlay.s  FS_rom.s  FX.s  FX_arm9.s  FX_atan.s  (+630 more)
arm9/data/: bss.s  bss_2.s  bss_2_2.s  bss_3.s  bss_4.s  rom2.s  rom2_2.s  rom2_3.s  rom2_4.s
arm9/files/: FILE_10C400.s  FILE_10C600.s  FILE_10C800.s  FILE_10CA00.s  FILE_10CC00.s  FILE_145400.s  FILE_16B600.s  FILE_184400.s  FILE_187800.s  FILE_1A3000.s  FILE_1AD200.s  FILE_1AD400.s  FILE_1DFE00.s  FILE_1F9200.s  FILE_227E00.s  FILE_237400.s  FILE_23BC00.s  FILE_264200.s  FILE_26B200.s  FILE_283000.s  FILE_283200.s  FILE_285600.s  FILE_285C00.s  FILE_286C00.s  FILE_288600.s  FILE_289000.s  FILE_289600.s  FILE_289E00.s  FILE_28AA00.s  FILE_28C200.s  FILE_28CC00.s  FILE_28D200.s  FILE_28D800.s  FILE_28DE00.s  FILE_28E200.s  FILE_28E800.s  FILE_28F200.s  FILE_290000.s  FILE_290600.s  FILE_291200.s  (+47 more)
arm9/lib/: .gitignore  Makefile
arm9/src/: FUN_02000DE4.c  FUN_02000DF4.c  FUN_020910A4.c  GFLIB_sysctl.c  GX_layers.c  WIFI_stubsmd5_dummy.c  ascii_util.c  bag.c  bag_view.c  bg_window.c  blackout.c  blackout_src.c  brightness.c  camera.c  coins.c  communication_error.c  daycare.c  easy_chat.c  encounter.c  error_handling.c  error_message_reset.c  event_data.c  field_move.c  field_move_environment.c  field_system_rtc_weather.c  (+182 more)
(+23267 files in other folders)
